# lpkg

./: .gitignore  Cargo.toml  Dockerfile  Makefile.toml  README.md  flake.nix  harvest_all.sh  harvest_all_books.sh  md5sums  wget-list
.cargo/: config.toml
.github/workflows/: main.yml
ai/: bugs.json  context.md  notes.md  personas.json  tasks.json
ai/metadata/: index.json  schema.json
concepts/nixette/: README.md  sample_flake.nix
data/: mlfs_ml-12.4-40-multilib.json
docs/: ARCHITECTURE.md  METADATA_PIPELINE.md  PACKAGE_GENERATION.md  RELEASES.md
src/: bootstrap.rs  config.rs  downloader.rs  html.rs  lib.rs  lpkg.rs  main.rs  md5_utils.rs  mirrors  mirrors.rs  package.rs  svg_builder.rs  tui.rs  ui.rs  version_check.rs  wget_list.rs
src/ai/: mod.rs
src/db/: mod.rs  models.rs  schema.rs
src/graphql/: context.rs  mod.rs  schema.rs
src/ingest/: blfs.rs  glfs.rs  lfs.rs  mod.rs
src/pkgs/: generator.rs  mlfs.rs  mod.rs  package.rs  scaffolder.rs
src/pkgs/by_name/: mod.rs
src/pkgs/by_name/bi/: mod.rs
src/pkgs/by_name/bi/binutils/: cross_toolchain.rs  mod.rs  parser.rs
src/pkgs/by_name/bi/binutils_pass_1/: mod.rs
src/pkgs/by_name/gc/: mod.rs
src/pkgs/by_name/gc/gcc_pass_1/: mod.rs
src/pkgs/by_name/gl/glibc/: mod.rs
src/pkgs/by_name/li/linux/: mod.rs
src/tui/: disk_manager.rs  downloader.rs  main_menu.rs  mod.rs  settings.rs
src/tui/animations/: donut.rs  mod.rs  progress.rs
