[package]
name = "package_management"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.100"
clap = { version = "4.5.48", features= ["derive"] }
console = "0.16.1"
crossterm = { version = "0.29.0", optional = true }
html_parser = "0.7.0"
indicatif = "0.18.0"
md5 = "0.8.0"
num_cpus = "1.17.0"
rand = "0.9.2"
ratatui = { version = "0.29.0", optional = true }
regex = "1.11.3"
reqwest = { version = "0.12.23", features = ["blocking", "json"] }
scraper = "0.19.0"

serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
spinners = "4.1.1"

[features]
tui = ["ratatui", "crossterm"]
