[package]
name = "package_management"
version = "0.1.0"
edition = "2024"
authors = ["Lucy <lucy@c-base.org>"]
description = "A Rust project for package management with CLI and optional TUI support."
license = "MIT"

[dependencies]
# CLI utilities
anyhow = "1.0.100"
clap = { version = "4.5.48", features = ["derive"] }
console = "0.16.1"

# Optional Terminal UI
crossterm = { version = "0.29.0", optional = true }
tui = { version = "0.19.0", optional = true }
rsille = { version = "2.3", optional = true }
gptman = { version = "2.0.1", optional = true }
uuid = { version = "1.18.1", optional = true, features = ["v4"] }

# Parsing & scraping
html_parser = "0.7.0"
scraper = "0.19.0"
regex = "1.11.3"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
jsonschema = { version = "0.17.0", default-features = false, features = ["draft202012"] }
walkdir = "2.5.0"
chrono = { version = "0.4.38", default-features = false, features = ["clock"] }
sha2 = "0.10.8"

# Utilities
num_cpus = "1.17.0"
rand = { version = "0.9.2", optional = true }
md5 = "0.8.0"

# HTTP
semver = "1.0.27"
inquire = "0.9.1"
juniper = { version = "0.17", optional = true }
actix-web = { version = "4.9", optional = true }
juniper_actix = { version = "0.7", optional = true }
shell-words = "1.1.0"
url = "2.5.7"
hex = "0.4.3"
diesel = { version = "2.1.6", features = ["sqlite", "r2d2", "returning_clauses_for_sqlite_3_35"] }

# Networking
ureq = { version = "2.9.7", features = ["tls", "json"] }


[features]
# TUI feature flag
tui = ["dep:tui", "dep:crossterm", "dep:rsille", "dep:gptman", "dep:uuid"]

# GraphQL/HTTP server feature flag
graphql = ["dep:juniper", "dep:actix-web", "dep:juniper_actix", "dep:rand"]

# Optional default features
default = []

[[bin]]
name = "graphql_server"
path = "src/bin/graphql_server.rs"
required-features = ["graphql"]
